--- a/src/main/resources/db/changelog/postgres/create-user-table.yaml
+++ b/src/main/resources/db/changelog/postgres/create-user-table.yaml
@@ -35,13 +35,13 @@ databaseChangeLog:
                     nullable: false
 
   - changeSet:
-      id: 2
+      id: 3
       author: asterbit
       changes:
         - addForeignKeyConstraint:
-            baseTableName: "check_ins"
-            baseColumnNames: "user_id"
-            referencedTableName: "users"
-            referencedColumnNames: "id"
-            constraintName: "fk_checkin_user"
-            onDelete: "CASCADE"
+            baseTableName: check_ins
+            baseColumnNames: user_id
+            constraintName: fk_checkin_user
+            referencedTableName: users
+            referencedColumnNames: id
+            onDelete: CASCADE
