--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <liquibase.version>4.33.0</liquibase.version>
         <json.token.version>0.11.5</json.token.version>
+        <swagger.version>2.8.9</swagger.version>
     </properties>
     <dependencies>
         <dependency>
@@ -111,6 +112,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
     </dependencies>
     <build>
