--- a/src/main/resources/db/changelog/postgres/create-check_ins-table.yaml
+++ b/src/main/resources/db/changelog/postgres/create-check_ins-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 4
       author: girogi
       changes:
         - createTable:
@@ -11,33 +11,31 @@ databaseChangeLog:
                   type: uuid
                   constraints:
                     primaryKey: true
+                    nullable: false
               - column:
-                  name: user_id
-                  type: uuid
+                  name: check_in_date
+                  type: timestamp
               - column:
                   name: activity_id
                   type: uuid
-
-  - changeSet:
-      id: 2
-      author: girogi
-      changes:
+                  constraints:
+                    nullable: false
+              - column:
+                  name: user_id
+                  type: uuid
+                  constraints:
+                    nullable: false
         - addForeignKeyConstraint:
-            constraintName: fk_checkins_user
-            baseTableName: check_ins
-            baseColumnNames: user_id
-            referencedTableName: users
-            referencedColumnNames: id
-            onDelete: CASCADE
-
-  - changeSet:
-      id: 3
-      author: girogi
-      changes:
-        - addForeignKeyConstraint:
-            constraintName: fk_checkins_activity
             baseTableName: check_ins
             baseColumnNames: activity_id
+            constraintName: fk_checkins_activity
             referencedTableName: activities
+            referencedColumnNames: id
+            onDelete: CASCADE
+        - addForeignKeyConstraint:
+            baseTableName: check_ins
+            baseColumnNames: user_id
+            constraintName: fk_checkins_user
+            referencedTableName: users
             referencedColumnNames: id
             onDelete: CASCADE
