fixed luqibase issue

--- a/src/main/resources/db/changelog/postgres/create-activities-table.yaml
+++ b/src/main/resources/db/changelog/postgres/create-activities-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 3
-      author: girogi
+      author: giorgi
       changes:
         - createTable:
             tableName: activities
