--- a/src/main/resources/db/changelog/postgres/create-check_ins-table.yaml
+++ b/src/main/resources/db/changelog/postgres/create-check_ins-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 4
-      author: girogi
+      author: giorgi
       changes:
         - createTable:
             tableName: check_ins
