--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: lmsDb
+      POSTGRES_DB: qrDb
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-
+volumes:
+  pgdata:
