--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     change-log: classpath:/db/changelog-master.yaml
     enabled: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/lmsDb
+    url: jdbc:postgresql://localhost:5432/qrDb
 #    username: ${postgresUser}
 #    password: ${postgresPassword}
     username: myuser
